GNOME Bugzilla – Bug 789521
GESAssets : Added function guards to avoid NULL pointer dereferencing
Last modified: 2017-11-21 13:15:38 UTC
NULL pointer dereferencing must be handled for GESAsset in public APIs at below:- File: gst-plugins-good-1.12.3/gst/isomp4/atomsrecovery.c
Created attachment 362344 [details] [review] gstreamer-editing-services: GESAssets : Added function guards to avoid NULL pointer dereferencing Please review the patch attached to fix the issue and share your feedback.
Looks good to me, but the commit date is a bit off, I don't think you really did that 16 years ago, can you fix this ? :)
Created attachment 362505 [details] [review] [PATCH] gstreamer-editing-services: GESAssets : Added function guards to avoid NULL pointer dereferencing Updated commit date.
Comment on attachment 362505 [details] [review] [PATCH] gstreamer-editing-services: GESAssets : Added function guards to avoid NULL pointer dereferencing Thanks for the patches. However: - Please make patches against a git checkout (you have an additional path component in there that doesn't belong). - There should be an empty newline after g_return_*if_fail() blocks. - NULL is not a GType, use G_TYPE_NONE or G_TYPE_INVALID.
*** Bug 789806 has been marked as a duplicate of this bug. ***
Created attachment 363129 [details] [review] [PATCH] GESAsset and GESLayer: Added function guards to avoid NULL pointer dereferencing Review comments implemented and merged patch for bug #789806
Please review the patch and share the feedback.
Dear Mr. Tim Can you please review or are you waiting to "Squash" another patch too, like that of [Bug 789806], in this patch ? :)
Was waiting to see if Thibault had any opinions. Pushed, with minor changes (removed function guard from _init function, and return 0 instead of NULL for GstClockTime). commit 23e9044b4e3df5f9ef03b873b2c09be046c93cb7 (HEAD -> master) Author: Ashish Kumar <kr.ashish@samsung.com> Date: Tue Nov 7 12:04:03 2017 +0530 GESAsset, GESLayer: add some function guards https://bugzilla.gnome.org/show_bug.cgi?id=789521