GESAsset, GESLayer: add some function guards

https://bugzilla.gnome.org/show_bug.cgi?id=789521